Adjust build for maintenance